# Thuk

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  bot.py  build.sh  docker-compose.yml  fly.toml  main.py  pyproject.toml  render.yaml  start.sh  thingy.py
agent/image/: img_agent.py
agent/speech/: stt.py  stt_agent.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  budget_agent.py  category_agent.py  expense_agent.py  export_agent.py  graph.py  intent_classifier.py  query_agent.py  split_agent.py  supervisor.py  text2sql_agent.py
app/database/: __init__.py  base.py  crud.py  models.py  schemas.py
app/memory/: __init__.py  redis_store.py
app/middleware/: rate_limit.py  twilio_auth.py
app/processors/: __init__.py  image_processor.py  text_parser.py  voice_processor.py
app/utils/: __init__.py  currency.py  encryption.py  logging.py
app/whatsapp/: __init__.py  client.py  handlers.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py
tests/: __init__.py  test_memory.py  test_text_parser.py
