[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thuk"
version = "0.1.0"
description = "WhatsApp Expense Tracker Bot - Multi-agent system for tracking expenses via text, image, and voice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.0.0",
    
    # LLM & Agents
    "openai>=1.57.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    
    # WhatsApp (Twilio)
    "twilio>=9.4.0",
    
    # Utilities
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "cryptography>=44.0.0",
    
    # Audio processing
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
